--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="wrapper">
 		<header class="masthead">
-			<h1>Hotel-O-City</h1>
+			<h1>Hotel-O-City daf</h1>
 		</header>
 		<section class="main">
 			<h2>A Heading That You Can Change</h2>
