--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<form name="travelForm" id="travelForm" action="#" method="post" enctype="application/x-www-form-urlencoded">
 				
 				<div class="formBox">
-					<label for="departure">Departure City</label>
+					<label for="departure">Departure City&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					<div class="form-row clearfix">
 					<img src="png/home-4x.png">
 					<input type="text" name="departure" id="departure" placeholder="departure city" autocomplete="on" required/>
@@ -48,14 +48,14 @@
 						</div>
 				</div>
 				<div class="formBox">
-					<label for="return_dt">Date of Return</label>
+					<label for="return_dt">Date of Return&nbsp;&nbsp;</label>
 					<div class="form-row clearfix">
 					<img src="png/spreadsheet-4x.png">
 					<input type="date" name="return_dt" id="return_dt" placeholder="" required/>
 						</div>
 				</div>
 				
-				<div class="col">
+				<div class="formBox">
 					<label for="num_adults">Number of Adults</label>
 					<div class="form-row clearfix">
 					<img src="png/people-4x.png">
