--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Responsive Travel Form</title>
 	
+	<script src="//use.edgefonts.net/almendra:n7:all.js"></script> 
+	<script src="//use.typekit.net/qrl0oci.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 	
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 	
@@ -18,7 +21,7 @@
 <body>
 	<div class="wrapper">
 		<header class="masthead">
-			<h1>Hotel-O-City daf</h1>
+			<h1>Hotel-O-City</h1>
 		</header>
 		<section class="main">
 			<h2>Start your wonderful trip here!</h2>
